plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.6'
//    id "io.freefair.lombok" version "8.0.1"
}

group = 'com.java'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.java.bookservice.BookServiceApplication'
        )
    }
}

ext {
    set('springCloudVersion', "2022.0.2")
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

repositories {
    mavenCentral()
}


dependencies {
    implementation 'org.hibernate:hibernate-core:6.6.3.Final'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'


    implementation 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor "org.mapstruct:mapstruct-processor:1.6.3"

    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'

    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
//    implementation 'org.springframework.boot:spring-boot-starter-web'
//    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa:3.1.4"
    implementation "org.springframework.cloud:spring-cloud-starter-config"
    implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
    implementation "org.springframework.cloud:spring-cloud-starter-sleuth:3.1.4"
    implementation "org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.1.RELEASE"
    implementation 'org.postgresql:postgresql:42.7.2'
    testImplementation "junit:junit:4.13.2"
}

tasks.named('test') {
    useJUnitPlatform()
}
